Added new form to input details to track.
Also added calendar widget for date selection and few visual changes.

--- a/moviealert/templates/base.html
+++ b/moviealert/templates/base.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Movie Alert</a>
+          <a class="navbar-brand" href={% url "home" %}>Movie Alert</a>
         </div>
         <div class="navbar-collapse collapse">
             <div class="navbar-form navbar-right">
