Move from form.form to modelform

--- a/moviealert/static/css/main.css
+++ b/moviealert/static/css/main.css
@@ -4,8 +4,8 @@
    Author's custom styles
    ========================================================================== */
 
-.jumbotron h1 {
-    color: rgba(200, 50, 255, 1);
+.jumbotron h2 {
+    color: #000000;
 }
 
 
