--- a/moviealert/templates/base.html
+++ b/moviealert/templates/base.html
@@ -46,7 +46,7 @@
         <div class="navbar-collapse collapse">
             <div class="navbar-form navbar-right">
                 {% if user.is_authenticated %}
-                    <a id="logout" href="/accounts/logout" class="btn btn-success">Logout</a>
+                    Hi, {{ user.email }}<a id="logout" href="/accounts/logout" class="btn btn-success">Logout</a>
                 {% else %} 
                     <a id="google_login" href="/accounts/google/login" class="btn btn-success">
                         Sign in with Google
@@ -64,8 +64,8 @@
       <footer>
         <p>&copy; Company 2015</p>
       </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+    </div> <!-- /container         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
+    <!--    <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>-->
 
     <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 
