--- a/moviealert/templates/base.html
+++ b/moviealert/templates/base.html
@@ -21,6 +21,7 @@
             }
         </style>
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/app.css' %}"
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
@@ -62,7 +63,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p></p>
       </footer>
     </div> <!-- /container         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
     <!--    <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>-->
