--- a/moviealert/templates/moviealert/index.html
+++ b/moviealert/templates/moviealert/index.html
@@ -8,37 +8,15 @@
     <div class="jumbotron">
       <div class="container">
         <h2>Welcome to Movie Alert</h2>
-        <p>This is a website where you enter your movie to track with location and once it hits a cinema hall near you it would send you a notification.{% if not user.is_authenticated %}
-            You need to register to use the app.
-      {% endif %}</p>
-        <p>
-            <form action="{% url "form_data" %}" method="POST">{% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                </table>
+        <p>Enter few details and if there's a movie on the date you entered you will receive a mail.{% if not user.is_authenticated %} You need to register to use the app.{% endif %}</p>
+        {% if user.is_authenticated %}
+
+            <form action="" method="POST">{% csrf_token %}
+                {{ form.as_p }}
                 <button class="btn btn-primary btn-lg" type="submit">Submit</button>
             </form>
-        </p>
+        {% endif %}
+
       </div>
     </div>
-
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-	<div class="col-md-4">
-	  <h2 id="local-date">{{today}}</h2>
-	  <p>This is the time using your local information </p>
-	  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-	</div>
-	<div class="col-md-4">
-	  <h2>Time Zones</h2>
-	  <p> India: <span id="time-tz">{{now|time:"H:i"}}</span></p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-	</div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-      </div>
 {% endblock %}
