--- a/moviealert/templates/base.html
+++ b/moviealert/templates/base.html
@@ -22,7 +22,9 @@
         </style>
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/app.css' %}"
-        <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/jquery-ui.structure.min.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}"/>
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
@@ -80,7 +82,7 @@
     <!--    <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>-->
 
     <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/vendor/jquery-ui.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/vendor/jquery-ui-lat.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
